--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mysql": "^2.15.21",
-    "@types/node": "^20.4.6",
+    "@types/node": "^20.4.8",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
@@ -22,11 +25,13 @@
     "@types/dotenv": "^8.2.0",
     "@types/knex": "^0.16.1",
     "@types/pg": "^8.10.2",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.1",
     "knex": "^2.5.1",
     "mysql": "^2.18.1",
     "p": "^0.2.0",
