--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node app.ts"
+    "start": "nodemon app.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,11 +12,13 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mysql": "^2.15.21",
     "@types/node": "^20.4.8",
+    "@types/nodemailer": "^6.4.9",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
@@ -27,6 +29,7 @@
     "@types/pg": "^8.10.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -34,9 +37,11 @@
     "jsonwebtoken": "^9.0.1",
     "knex": "^2.5.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.4",
     "p": "^0.2.0",
     "pg": "^8.11.2",
     "reflect-metadata": "^0.1.13",
+    "stripe": "^12.18.0",
     "typeorm": "^0.3.17"
   }
 }
