--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    
     "target": "es5",
     "lib": [
       "dom",
@@ -20,6 +21,10 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
+  "baseUrl": "./",
+    "paths": {
+      "@mui/icons-material": ["node_modules/@mui/icons-material"]
+    } ,
   "include": [
     "src"
   ]
