--- a/.hintrc
+++ b/.hintrc
@@ -5,5 +5,11 @@
   "hints": {
     "axe/forms": "off",
     "no-inline-styles": "off"
+  } ,
+  
+  "rules": {
+    // ...
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
   }
 }
