--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "@types/mysql": "^2.15.21",
     "@types/node": "^20.4.8",
     "@types/nodemailer": "^6.4.9",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
