--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "devtools": "^8.15.4",
     "i": "^0.3.7",
     "mdb-react-ui-kit": "^6.2.0",
     "react": "^18.2.0",
