--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,6 +7,8 @@
       "dom.iterable",
       "esnext"
     ],
+    "types": ["node", "react", "react-dom"],
+
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
